hphp/test/slow/traits/2080.php.expectf
Fatal error: Trait use aliases cannot be declared static in %s/test/slow/traits/2080.php on line 10
